<resources>
    <string name="app_name">JJTU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_header_main_jjtu_title">Shri Jagdishprasad Jhabarmal Timbrewala University</string>
    <string name="chancellor_name">Dr. Vinod Tibrewala</string>
    <string name="about_us">About us</string>
    <string name="chancellor_desk">Chancellor Desk</string>
    <string name="gallery">Gallery</string>
    <string name="follow_us">Follow us</string>
    <string name="phd_program">PHD Program</string>
    <string name="contact_us">Contact us</string>
    <string name="publications">Publications</string>
    <string name="conferences">Conferences</string>
    <string name="activities">Activities</string>
    <string name="news">News</string>
    <string name="about_us_body">Shri Jagdishprasad Jhabarmal Tibrewala University has been established by a State Legislative Act of Rajasthan under No. F2/5/vidhi2 of 2009. It has commenced its academic operations including Research in the year 2009 &#8211; 2010. The University has set up sufficient infrastructure including laboratories, sports complex, library, yoga therapy center etc. Two batches of management course &amp; two batches of engineering course have passed out and good number of Research Scholars have completed their Ph.D course.The University undertakes Ph.D course strictly as per UGC norms 2009 .The University has also conducted three Annual Convocations and two Special Convocations successfully. All thesis undergo plagiarism check and the thesis is accepted for evaluation only when the plagiarized work is within the acceptable limit. The University supports education of under-privileged students to complete their higher studies.The University also supports the financially weak schools in Jhunjhunu and other social welfare schemes.The University provides 75% exemption to girl students in academic courses. The University has organized more then 100 Conferences- National/International &amp; Workshops.The University had organized International Conference in Colombo(Sri Lanka) in 2016 and in Dubai 2017. The University is publishing ISSN numbered Research Journals with Impact Factor.</string>
    <string name="chancellor_message">Our ancestors, who hailed from Rajasthan, spread their wings all over the world for material prosperity. Today, they have their unique position in global rich society. The prosperity has come due to hard work and honesty. Our trust which is basically a trust of migrated Rajasthani people, has Rajasthan and its people very close to their heart. Our trust always feels that when one sheikh of Dubai can transform a desert into a heaven like place why cannot we all unite together to transform the land of dhaura-ri which is so close to our heart, into beautiful place like Dubai or better than Dubai. We are going to work to achieve this with our full heart, body, mind &amp; soul by spreading education which is the latest weapon of power to achieve the desired objective. We want Rajasthan not only cent percent literate state but also to be an educational hub of India in higher quality education of all streams. Our forefathers due to their entrepreneurship skills have provided jobs to millions and now our University will produce entrepreneurs who will not be job seekers but job providers for millions, throughout the globe. I request one and all, rich or poor, educated or un-educated, politician or non-politician, religious or non-religious to join hands with us in whatever capacity they can to achieve our above goal &amp; to fulfil our vision. Transformation of society by establishing quality based educational institutions with a strong base in Indian values for sustainable exploitation of natural resources through development of human resource. The Mission of JJT University is to provide advanced knowledge and educate students including the underprivileged in science, technology and other areas that will best serve the nation and mankind in the 21st century. This, we believe, will enable us to build up a society based on equality and with democratic values.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
