<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_chancellor_desk"
            android:icon="@drawable/ic_chancellor_desk"
            android:title="@string/chancellor_desk" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_follow_us"
            android:icon="@drawable/ic_menu_follow_us"
            android:title="@string/follow_us" />
        <item
            android:id="@+id/nav_phd_program"
            android:icon="@drawable/ic_menu_phd_program"
            android:title="@string/phd_program" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_publications"
            android:icon="@drawable/ic_menu_publications"
            android:title="@string/publications" />
        <item
            android:id="@+id/nav_conferences"
            android:icon="@drawable/ic_menu_conferences"
            android:title="@string/conferences" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_activities"
            android:title="@string/activities" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />
    </group>
</menu>
