<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.example.neeladri.jjtu.fragments.ChancellorDeskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/about_us_imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chancellor_image_height"
                android:background="@color/colorBlack"
                android:contentDescription="@string/navigation_header_main_jjtu_title"
                android:fitsSystemWindows="true"
                android:src="@drawable/chancellor" />

            <TextView
                android:id="@+id/about_us_image_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_us_image_title_container_height"
                android:layout_gravity="bottom"
                android:layout_alignParentBottom="true"
                android:background="@drawable/about_us_image_title_background_gradient"
                android:gravity="center_vertical"
                android:padding="@dimen/about_us_image_title_container_padding"
                android:text="@string/chancellor_name"
                android:textColor="@color/titleColorWhite"
                android:textSize="@dimen/chancellor_image_title_text_size"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_us_body_container_top_margin"
            android:lineSpacingExtra="@dimen/about_us_body_line_spacing"
            android:padding="@dimen/about_us_body_container_padding"
            android:text="@string/chancellor_message"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="false"
            android:textSize="@dimen/about_us_image_body_text_size" />
    </LinearLayout>
</ScrollView>
